--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 <script src="js/jquery.mobile-1.4.5.min.js"></script>
 <script src="js/acciones.js" type="text/javascript"></script>
 
-<script src"phonegap.js"></script><!--necesario*/-->
+<script src="phonegap.js"></script><!--necesario*/-->
 
 </head>
 <body>
 <div data-role="page" id="Principal" data-theme="b">
-<div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar"data-add-back-btn-theme="b">
+<div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="b">
 <h1> Datos del Dispositivo</h1>
 </div>
 
+<div>
 <div data-role="main" class="ui-content">
 <div>
 <ul data-role="listview" data-theme="b" class="ui-listview ui-group-theme-a">
@@ -39,7 +40,7 @@
    <h4> Angel Joaquin Dominguez Bueno  </h4>
    <img src="res/android/mdpi.png" width="56" height="46">
    </div>
-   </div>
+   
    
    <div data-role="page" id="page2" data-theme="b">
    <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
@@ -82,7 +83,7 @@
   <img src="res/android/mdpi.png" width="56" height="46">
   </div>
   </div>
-  </div>
+  
   </body>
   </html>
   
