--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 <h1> Datos del Dispositivo</h1>
 </div>
 
-<div>
 <div data-role="main" class="ui-content">
 <div>
 <ul data-role="listview" data-theme="b" class="ui-listview ui-group-theme-a">
@@ -40,7 +39,7 @@
    <h4> Angel Joaquin Dominguez Bueno  </h4>
    <img src="res/android/mdpi.png" width="56" height="46">
    </div>
-   
+   </div>
    
    <div data-role="page" id="page2" data-theme="b">
    <div data-role="header" data-add-back-btn="true" data-back-btn-text="Regresar" data-back-btn-theme="a">
@@ -77,13 +76,12 @@
   </div>
   </div>
   
-  <div data-role="footer" align="center" data-theme="b" data-position="fixed"
-  >
+  <div data-role="footer" align="center" data-theme="b" data-position="fixed">
   <h4> Angel Joaquin Dominguez Bueno </h4>
   <img src="res/android/mdpi.png" width="56" height="46">
   </div>
   </div>
-  
+
   </body>
   </html>
   
